--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ header{
 
 .logo{
     width: 120px;
-    height: 50px;
+    height: 48px;
     flex-shrink: 0;
-    padding-left: 50% ;
-    padding-top: 20px ;
+    /*padding-left: 50% ;*/
+    padding-top: 50px ;
 }
 
 main{
@@ -144,21 +144,62 @@ main{
     top: 40px;
     left: 1000px;
     border-radius: 32px;
+    flex-shrink: 0;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 
 }
 
 .contenedorMunieco{
-    width: 216px;
+    width: 336px;
     height: 304px;
-    top: 283px;
+    top: 4550px;
     left: 1032px;
     
 }
 
 .contenedorDeParrafo{
-    width: 336px;
+    width: 350px;
     height:  142px;
     top: 409px;
     left: 1032px;
     gap: 16px;
+}
+.resultado{
+    align-self: stretch;
+    color: var(--gray-gray-500, #343A40);
+    text-align: center;
+    font-family: Inter,sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; /* 28.8px */
+}
+
+.parrafito{
+    align-self: stretch;
+    color: var(--gray-gray-400, #495057);
+    text-align: center;
+    font-family: Inter,sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+}
+
+.btn-copiar{
+    width: 328px;
+    height: 67px;
+    padding: 24px;
+    align-items: flex-start;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background-color:  #d6dde4;
+    color: #0A3871;
+    border: 1px solid #0A3871;
+    cursor: pointer;
+    font-family: Inter,sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    margin-right: 20px;
 }
